change in route path science page alignment fix saving for existing triggers

--- a/ooiui/static/css/common/landingPages.css
+++ b/ooiui/static/css/common/landingPages.css
@@ -46,10 +46,11 @@ dd:nth-of-type(6) { background: #a2c8f0; }
 
 #wrapper {
   padding: 0 0 0 220px;
-  margin-top: 51px;
+  margin-top: 59px;
 }
 #sidebar-wrapper {
   width: 200px;
+  height: 94% !important;
 }
 .sidebar-nav{
   width: 200px;
