--- a/ooiui/static/css/common/scienceLayout.css
+++ b/ooiui/static/css/common/scienceLayout.css
@@ -37,7 +37,7 @@
         position: fixed;
         left: 350px;
         width: 0;
-        height: 100%;
+        height: 94%;
         margin-left: -350px;
         overflow-y: auto;
         /*background: #000;*/ /*black background*/
@@ -140,7 +140,7 @@
     @media(min-width:768px) {
         #wrapper {
             padding-left: 350px;
-            margin-top: 51px;
+            margin-top: 59px;
         }
 
         #wrapper.toggled {
